@@ -12,82 +12,25 @@
 // Matrix and wraps calls to LAPACK functions.
 //
 //-------------------------------------------------------------------------------------------
+#include "TMatrix.h"
 #include "MesmerPrecision.h"
-#include "Matrix.h"
-#include <string>
 
 namespace mesmer
 {
-	class dMatrix : public Matrix<double> {
+  // double version of Matrix
+  class dMatrix : public TMatrix<double>{
+		public: dMatrix(int n) : TMatrix<double>(n) { } ;
+  };
 
-	public:
+  // double-double version of Matrix
+	class ddMatrix : public TMatrix<dd_real>{
+		public: ddMatrix(int n) : TMatrix<dd_real>(n) { } ;
+	};
 
-		// Constructor
-		dMatrix(int n) : Matrix<double>(n, 0.0) { } ;
-
-		//
-		// Wrapped call to EISPACK routine to diagonalise matrix.
-		//
-		void diagonalize(double *rr) {
-
-			int size ;
-			size = static_cast<int>(m_msize) ;
-
-			//  Allocate memory for work array
-			double *work = new double[size] ;
-			double *rrProxy = new double[size] ;
-
-			tred2(m_matrix, size, rrProxy, work) ;
-			tqli(rrProxy, work, size, m_matrix) ;
-
-			for (int i = 0; i < size; ++i){
-				rr[i] = to_double(rrProxy[i]);
-			}
-
-			delete [] work ;
-			delete [] rrProxy ;
-
-		}
-
-		// 
-		// Solve a set of linear equations with a single right hand side.
-		//
-		void solveLinearEquationSet(double *rr) {
-
-			int size ;
-			size = static_cast<int>(m_msize) ;
-
-			//  Allocate memory for work array
-			int *indx = new int[size] ;
-
-			double d ;
-			ludcmp(m_matrix, size, indx, d) ;
-			lubksb(m_matrix, size, indx, rr) ;
-
-      delete [] indx ;
-
-    };
-
-    // Matrix inversion method by Gaussian elimination
-    int dMatrix::invert();
-
-  private:
-
-		//
-		// EISPACK methods for diagonalizing matrix.
-		//
-		void    tred2   (double **a, int n, double *d, double *e) ;
-		void    tqli    (double *d, double *e, int n, double **z) ;
-		double  pythag  (double a, double b) ;
-
-		//
-		// NR LU methods for linear equation solving.
-		//
-		void ludcmp(double **a,  int n, int *indx, double d) ;
-		void lubksb(double **a,  int n, int *indx, double* b) ;
-
-	} ;
-
+  // quad-double version of Matrix
+	class qdMatrix : public TMatrix<qd_real>{
+		public: qdMatrix(int n) : TMatrix<qd_real>(n) { } ;
+	};
 }//namespacer mesmer
 
 
