@@ -7,9 +7,11 @@
 #define _marray_hpp_040422213815
 
 #include "a2d.h"
+#include "MesmerPrecision.h"
 
-typedef a2d_t<double> db2D;
-
+typedef a2d_t<double>      db2D;
 typedef a2d_t<long double> ldb2D;
+typedef a2d_t<dd_real>     ddb2D;
+typedef a2d_t<qd_real>     qdb2D;
 
 #endif
